--- a/mod2_solution/css/css_food.css
+++ b/mod2_solution/css/css_food.css
@@ -18,8 +18,11 @@ h1{
 
 section{
     position : relative;
+    height : 200px;
     margin : 10px;
-    border : 1px solid black;
+    border : 5px solid black;
+    border-radius: 40px 5px ;
+    border-style:groove;
     background-color: gray;
 }
 
